--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
 
     color:var(--primary-text-color);    
     font-family: Roboto, sans-serif;
+    font-size: 14px;
     letter-spacing: 0.03em;
 }
  /* цвет заголовков */
@@ -39,22 +40,22 @@
   color: var(--title-text-color);
 
   font-weight: 500; 
-  font-size: 14px;
   line-height: 1.14px;
   letter-spacing: 0.02em;
   text-decoration: none;
  /* xoвер, фокус элементы навигации */ 
  }
- .header-nav a:hover, .header-nav a :focus {
+ .header-nav a:hover, .header-nav a :focus, .header-nav a:active {
   color: var(--accent-color);
- }
+ } 
+ 
+
  /* Цвет и шрифт cсылок телефон и почта */ 
  .contacts a{ 
   color: var(--primary-text-color);
 
   font-style: 400;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -75,9 +76,10 @@
  .items-works{list-style: none;
  }
 /* xoвер, фокус - телефон и почта */ 
- .contacts a:hover, .header-nav a :focus {
+ .contacts a:hover, .header-nav a :focus  {
  color: var(--accent-color);
 }
+
   /* цвет и шрифт логотипа в шапке -правая часть */
   .logo-header{
     color:var(--primary-black-color);
@@ -109,7 +111,7 @@
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-  text-transform: uppercase;
+
   }
   /* кнопка Герой */
   .button-heroy {
@@ -131,15 +133,11 @@
  /* шрифты заголовки секция преимущества */
  .subtitle{
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
  }
 /* шрифты текст секция преимущества */
  .subtitle-p { 
-  font-weight: 400;
-  font-size: 14px;
   line-height: 1.7;
  }
  /* шрифты заголовок работы */
@@ -193,7 +191,7 @@ line-height: 1.19
 }
   /* шрифты текст работы */
 .items-works p{  
-    font-weight: 400;
+    
     font-size: 16px;
     line-height: 1.88;
 }
@@ -204,9 +202,9 @@ line-height: 1.19
   /* цвет и шрифт тел и эл. почты в футере */
   .link-mailphone {
     color: var(--phone-mail-color);
-    
+
+    font-style: normal;
     /* font-weight: 400; */
-    font-size: 14px;
     line-height: 1.71;
     text-decoration: none;
   }
@@ -219,10 +217,10 @@ line-height: 1.19
     color: var(--secondary-text-background-color);
 
     /* font-weight: 400; */
-    font-size: 14px;
+    font-style: normal;
     line-height: 1.71;
     text-decoration: none;
-  }
+  }upp
   /* xoвер, фокус адрес в футере */
   .link-town:hover, .link-town:focus{
     color: var(--accent-color);
@@ -231,7 +229,7 @@ line-height: 1.19
   .logo-footer{
     color: var(--secondary-background-color);
 
-    font-family: Raleway sans-serif;  
+    font-family: Raleway, sans-serif;  
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
